[gd_scene load_steps=5 format=3 uid="uid://bwf1x1yhdh7ae"]

[ext_resource type="Script" uid="uid://nxgdq8f25mh2" path="res://scripts/camera.gd" id="1_cvpoc"]
[ext_resource type="Texture2D" uid="uid://0184fvk3qcxq" path="res://sprites/feesh.tres" id="2_kod1s"]
[ext_resource type="FontFile" uid="uid://jycida43pus4" path="res://fonts/Graph-35-pix.ttf" id="2_tmlye"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_qawlr"]

[node name="Camera2D" type="Camera2D"]
script = ExtResource("1_cvpoc")

[node name="SensorLeft" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorLeft"]
position = Vector2(-161, -5)
shape = SubResource("SegmentShape2D_qawlr")

[node name="SensorRight" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorRight"]
position = Vector2(161, -5)
shape = SubResource("SegmentShape2D_qawlr")

[node name="SensorTop" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorTop"]
position = Vector2(-5, -91)
rotation = -1.5708
shape = SubResource("SegmentShape2D_qawlr")

[node name="SensorBottom" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorBottom"]
position = Vector2(-5, 91)
rotation = -1.5708
shape = SubResource("SegmentShape2D_qawlr")

[node name="LabelTime" type="Label" parent="."]
z_index = 10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -87.0
offset_right = -78.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.662745)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_tmlye")
theme_override_font_sizes/font_size = 8
text = "00:00"

[node name="LabelVictory" type="Label" parent="."]
visible = false
z_index = 10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -36.5
offset_right = 39.5
offset_bottom = -19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_tmlye")
theme_override_font_sizes/font_size = 8
text = "VICTORY"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -87.0
offset_right = 158.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="TextureRectFeesh" type="TextureRect" parent="HBoxContainer"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("2_kod1s")
expand_mode = 2
stretch_mode = 5

[node name="LabelFeesh" type="Label" parent="HBoxContainer"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_tmlye")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2

[node name="VictoryTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="VictoryTimer" to="." method="_on_victory_timer_timeout"]
